# gonia

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/gonia/: gonia.hpp  shamos_hoey.hpp
tests/: CMakeLists.txt  TestIntersect.cpp  TestIsSimple.cpp  TestPrimitives.cpp
